<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/taskTitle" >
    </EditText>

    <EditText
        android:id="@+id/etTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:hint="@string/taskDescription"
        android:inputType="textMultiLine|textLongMessage"
        android:lines="5"
        android:gravity="top|left"
        android:singleLine="false" >
    </EditText>

    <LinearLayout
        android:id="@+id/llFinishDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvFinishDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="onClick"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="12.12.12" />

        <TextView
            android:id="@+id/tvFinishTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="onClick"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="13:37" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnTaskDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btnTaskDone" >
        </Button>

        <Button
            android:id="@+id/btnTaskDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/btnTaskDelete" >
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/btnTaskSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btnTaskSave" >
    </Button>

    <Button
        android:id="@+id/btnAddContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/btnAddContact" >
    </Button>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>